--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <script>
-    $(function(){
+    $(document).ready(function(){
         var title = document.querySelectorAll('h4');
 
         title.forEach(function(o){
