--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="gnb">
                 <nav>
                     <ul>
-                        <li><a href="#none">Menu01</a>
+                        <li><a href="#none">Elements</a>
                             <ul>
                                 <li><a href="#none">Menu01-1</a></li>
                                 <li><a href="#none">Menu01-2</a>
@@ -94,7 +94,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="#none">Menu02</a></li>
+                        <li><a href="#none">Layout</a></li>
                         <li><a href="#none">Menu03</a>
                             <ul>
                                 <li><a href="#none">Menu03-1</a></li>
